<!--
  ~ Copyright 2017 lizhaotailang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">纸飞机</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">首页</string>
    <string name="nav_bookmarks">收藏</string>

    <string name="zhihu_daily">知乎日报</string>
    <string name="guokr_handpick">果壳精选</string>
    <string name="douban_moment">豆瓣一刻</string>

    <!--常用-->
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="share_error">分享失败</string>

    <string name="title_activity_read">阅读</string>
    <string name="title_activity_guokr_read">果壳精选</string>
    <string name="loading_more">正在加载 啦啦啦…</string>
    <string name="loaded_failed">加载失败!</string>
    <string name="retry">重试</string>
    <string name="copied_to_clipboard">复制成功</string>
    <string name="copied_to_clipboard_failed">复制失败</string>
    <string name="added_to_bookmarks">已添加到收藏</string>
    <string name="deleted_from_bookmarks">已从收藏中删除</string>

    <string name="feel_lucky">随便看看</string>
    <string name="feel_lucky_short">随便看看</string>
    <string name="search_bookmarks">搜索收藏</string>
    <string name="check_bookmarks">查看收藏</string>

    <!--bottom sheet list-->
    <string name="action_add_to_bookmarks">添加到收藏</string>
    <string name="action_delete_from_bookmarks">取消收藏</string>
    <string name="action_copy_link">复制链接</string>
    <string name="action_open_in_browser">在浏览器中打开</string>
    <string name="action_copy_text">复制内容文本</string>
    <string name="action_share_as_text">作为文本分享</string>

    <!--main menu-->
    <string name="change_theme">切换主题</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <!--navigation view menu end-->

    <string name="share_extra"> 分享自 纸飞机</string>
    <string name="share_to">分享至</string>

    <!--activity关于-->
    <string name="version">版本:V1.0.0 IMITATE</string>
    <string name="rate">为纸飞机应用评分</string>
    <string name="feedback">反馈Bug / 建议</string>
    <string name="donate">捐赠开发者</string>
    <string name="donate_content">支付宝账号将会复制到粘贴板，进入支付宝可直接粘贴完成捐赠，感谢您的支持！</string>
    <string name="donate_account">marktonymengyi@gmail.com</string>
    <string name="feedback_uri">http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&amp;email=i7i8v7K7ur6zs8v6_qXo5OY</string>
    <string name="mail_topic">纸飞机使用反馈与建议</string>
    <string name="device_model">设备型号:</string>
    <string name="sdk_version">SDK版本:</string>
    <string name="no_browser_found">没有安装浏览器</string>
    <string name="author">原作者</string>
    <string name="author_name">黎赵太郎</string>
    <string name="author_description">湖南,长沙</string>
    <string name="follow_he_on_github">在GitHub关注他</string>

    <string name="author_imitate">仿照作者</string>
    <string name="author_name_imitate">NPE</string>
    <string name="follow_me_on_github">在GitHub关注我</string>
    <string name="me_github_url">https://github.com/374901588</string>


    <string name="support">支持</string>
    <string name="feedback_description">帮助我改进纸飞机App</string>
    <string name="coffee">请原作者喝杯咖啡</string>
    <string name="coffee_description">如果你认同我的工作，可以请我喝杯咖啡表示支持</string>
    <string name="github_url">https://github.com/TonnyL</string>
    <string name="open_source_license">开源许可</string>
    <string name="easter_egg">彩蛋</string>
    <string name="easter_egg_content">点我名字这么多次， 你一定是喜欢我!</string>
    <string name="sure">确定</string>
    <string name="yes">是的</string>
    <!--activity关于 end-->

    <!--settings_preference_fragment-->
    <string name="basic_settings">基本设置</string>
    <string name="no_picture_mode">无图模式</string>
    <string name="no_picture_mode_description">阅读时不再加载图片</string>
    <string name="in_app_browser">使用内置浏览器</string>
    <string name="in_app_browser_description">应用内查看链接</string>
    <string name="time_of_saving_articles">文章保存时间</string>
    <string name="other_settings">其他设置</string>
    <string name="clear_image_cache">清除图片缓存</string>
    <string name="clear_image_cache_successfully">清理成功</string>
    <!--setting-->

    <string name="network_error">网络走丢了…点击重试</string>
    <string name="refresh">刷新</string>
    <string name="title_activity_about">关于</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_test">Test</string>

</resources>
